--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Groove Consulting Inc. : Deliver eCommerce marketing, perations &amp; technology solutions" />
+    <meta name="description" content="Groove Consulting Inc. : Deliver eCommerce marketing, operations &amp; technology solutions" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -27,14 +27,12 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="site-coming-soon" class="anchor" href="#site-coming-soon"><span class="octicon octicon-link"></span></a>Site Coming Soon</h1>
 
-<h3>
-<a name="contact-us" class="anchor" href="#contact-us"><span class="octicon octicon-link"></span></a>Contact Us</h3>
+<h1>
+<a name="contact-us" class="anchor" href="#contact-us"><span class="octicon octicon-link"></span></a>Contact Us</h1>
 
 <p>Email: <a href="mailto:parris@groovecs.com">parris@groovecs.com</a>
-Phone: <a>(919) 886-7133</a></p>
+Phone: <a href="tel:+19198867133">(919) 886-7133</a></p>
       </section>
     </div>
 
