--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/GrooveCS">View on GitHub</a>
+          <!--<a id="forkme_banner" href="https://github.com/GrooveCS">View on GitHub</a>-->
 
           <h1 id="project_title">Groove Consulting Inc.</h1>
           <h2 id="project_tagline">Deliver eCommerce marketing, perations &amp; technology solutions</h2>
