--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <!--<a id="forkme_banner" href="https://github.com/GrooveCS">View on GitHub</a>-->
 
           <h1 id="project_title">Groove Consulting Inc.</h1>
-          <h2 id="project_tagline">Deliver eCommerce marketing, perations &amp; technology solutions</h2>
+          <h2 id="project_tagline">Deliver eCommerce marketing, operations &amp; technology solutions</h2>
 
         </header>
     </div>
