--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@ Phone: <a href="tel:+19198867133" >(919) 886-7133</a></p>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
+      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="parrislucas"><a class="LI-simple-link" href='https://www.linkedin.com/in/parrislucas?trk=profile-badge'>Parris Lucas</a></div>
       <footer class="inner">
         
       </footer>
     </div>
 
     
-
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   </body>
 </html>
