--- a/index.html
+++ b/index.html
@@ -1,50 +1,41 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Groove Consulting Inc. : Deliver eCommerce marketing, operations &amp; technology solutions" />
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+  <meta name="description"
+    content="Red Hat Process-based Performance Engineering to deliver synergy in what's possible, resolving impediments, and forging lasting ties with customers. As a labored, insightful specialist fabricating near real-time systems with a propensity for sustaining the open-source community. Cultivated Automation, Integration, and Process demand business system expertise to our customer's ambitions. " />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css" />
 
-    <title>Groove Consulting Inc.</title>
-  </head>
+  <title>Parris Lucas | GrooveCS</title>
+</head>
 
-  <body>
+<body>
+  <!-- HEADER -->
+  <div id="header_wrap" class="outer">
+    <header class="inner">
+      <a id="forkme_banner" href="https://github.com/GrooveCS">View on GitHub</a>
+      <h1 id="project_title"></h1>
+      <h2 id="project_tagline"></h2>
+    </header>
+  </div>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <!--<a id="forkme_banner" href="https://github.com/GrooveCS">View on GitHub</a>-->
-
-          <h1 id="project_title">Groove Consulting Inc.</h1>
-          <h2 id="project_tagline">Deliver eCommerce marketing, operations &amp; technology solutions</h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-
-<h1>
-<a name="contact-us" class="anchor" href="#contact-us"><span class="octicon octicon-link"></span></a>Contact Us</h1>
-
-<p>Email: <a href="mailto:parris@groovecs.com">parris@groovecs.com</a>
-Phone: <a href="tel:+19198867133" >(919) 886-7133</a></p>
+  <!-- MAIN CONTENT -->
+  <div id="main_content_wrap" class="outer">
+    <section id="main_content" class="inner">
+      <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="light" data-vanity="parrislucas"><a class="LI-simple-link" href='https://www.linkedin.com/in/parrislucas?trk=profile-badge'>Parris Lucas</a></div>
       </section>
-    </div>
+  </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="parrislucas"><a class="LI-simple-link" href='https://www.linkedin.com/in/parrislucas?trk=profile-badge'>Parris Lucas</a></div>
-      <footer class="inner">
-        
-      </footer>
-    </div>
+  <!-- FOOTER  -->
+  <div id="footer_wrap" class="outer">
+  </div>
+  <footer class="inner"></footer>
+  </div>
 
-    
-<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-  </body>
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+</body>
+
 </html>
